# research-os

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Makefile  README.md  pyproject.toml
config/: trusted-nodes.json
docker/: api.Dockerfile  site.Dockerfile
docs/: canonical-ingress-flow.md  join-with-ai.md  production-runbook.md  proof-effort-lifecycle.md  public-launch-runbook.md  seeded-efforts.md  verification-gate.md
schemas/: claim-asserted.schema.json  event-envelope.schema.json  lease-command.schema.json  lease.schema.json  network-envelope.schema.json  node-heartbeat.schema.json  node-identity.schema.json  recommend-next-request.schema.json  recommend-next-response.schema.json  run-completed.schema.json  snapshot-published.schema.json  workspace-started.schema.json
scripts/: backup_railway_volume.py  backup_runtime_state.py  build_microsite.py  export_effort_briefs.py  export_openapi.py  join_openintention.py  publish_goal.py  rebuild_claim_projection.py  rebuild_frontier_projection.py  restore_runtime_state.py  rollover_proof_effort.py  run_autoresearch_mlx_compounding_smoke.py  run_first_user_smoke.py  run_layered_verification_gate.py  run_mlx_history_compounding_smoke.py  run_nightly_contribution_window.py  run_nightly_contribution_window_smoke.py  run_overnight_autoresearch_worker.py  run_overnight_autoresearch_worker_smoke.py  run_production_smoke.py  run_proof_effort_rollover_smoke.py  run_public_ingress_smoke.py  run_publish_goal_smoke.py  run_repeated_external_participation_proof.py  run_shared_participation_smoke.py  run_surface_coherence_check.py  seed_demo.py
spec/: backlog.yaml  domain-model.yaml  openapi.generated.json  product.yaml
(+130 files in other folders)
