[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-os"
version = "0.1.0"
description = "Machine-native lineage and coordination scaffold for shared AI research efforts."
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Ali Argün"}]
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "cryptography>=45.0,<46.0",
  "certifi>=2026.2.25,<2027.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "httpx>=0.27,<1.0",
  "ruff>=0.5,<1.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
